--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title></title>
-  <script src="index.r.js"></script>
+  <script src="./dist/bundle.js"></script>
 </head>
 <body onselectstart="return false;">
 
