--- a/index.html
+++ b/index.html
@@ -4,10 +4,16 @@
   <meta charset="UTF-8">
   <title></title>
   <script src="./dist/bundle.js"></script>
+  <style>
+    *{
+      margin: 0px;
+      padding: 0px;
+    }
+  </style>
 </head>
 <body onselectstart="return false;">
 
-  <div id="main" width="800" height="600">
+  <div id="main" style="width: 600px; height: 800px;">
 
   </div>
 </body>
