--- a/index.html
+++ b/index.html
@@ -9,12 +9,16 @@
       margin: 0px;
       padding: 0px;
     }
+
+    #main{
+      border: 1px solid rgba(123, 123, 123, 0.4);
+    }
   </style>
 </head>
 <body onselectstart="return false;">
 
-  <div id="main" style="width: 600px; height: 800px;">
+  <canvas id="main" width=600 height=600>
 
-  </div>
+  </canvas>
 </body>
 </html>
